remove React and TailwindCSS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,11 @@
-name: Build and Zip Chrome Extension
+name: Build and Zip Extensions
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    name: Build
+    name: Build Extensions
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
@@ -13,21 +13,30 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 2
- 
+
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
- 
-      - name: Install dependencies
-        run: yarn
- 
-      - name: Build Chrome
-        run: yarn build:chrome
+          cache: 'npm'
 
-      - name: Upload Chrome extension artifacts
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build Chrome Extension
+        run: npm run build:chrome
+
+      - name: Build Firefox Extension
+        run: npm run build:firefox
+
+      - name: Upload Chrome Extension Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: vite-web-extension-chrome
           path: dist_chrome
+
+      - name: Upload Firefox Extension Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: vite-web-extension-firefox
+          path: dist_firefox
