--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,6 @@
   },
   "extends": [
     "eslint:recommended",
-    "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
@@ -17,10 +16,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
-  "rules": {
-    "react/react-in-jsx-scope": "off"
-  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {},
   "globals": {
     "chrome": "readonly"
   },
