--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,11 @@
 {
   "manifest_version": 3,
+  "version": "1.0.0",
   "name": "name in manifest.json",
   "description": "description in manifest.json",
   "options_ui": {
-    "page": "src/pages/options/index.html"
+    "page": "src/pages/options/index.html",
+    "open_in_tab": true
   },
   "action": {
     "default_popup": "src/pages/popup/index.html",
@@ -28,7 +30,7 @@
         "<all_urls>"
       ],
       "js": [
-        "src/pages/content/index.tsx"
+        "src/pages/content/index.ts"
       ],
       "css": [
         "contentStyle.css"
