--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vite-web-extension",
   "version": "1.4.0",
-  "description": "A simple chrome & firefox extension template with Vite, React, TypeScript and Tailwind CSS.",
-  "license": "MIT",
+  "description": "A simple chrome & firefox extension template with Vite and TypeScript",
+  "license": "GPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "https://github.com/JohnBra/vite-web-extension.git"
+    "url": "https://github.com/s-nt-s/vite-web-extension.git"
   },
   "scripts": {
     "build": "vite build --config vite.config.chrome.ts",
@@ -17,30 +17,20 @@
   },
   "type": "module",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.32",
-    "@tailwindcss/vite": "^4.0.12",
     "@types/chrome": "^0.0.309",
     "@types/node": "^22.13.9",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
     "@types/webextension-polyfill": "^0.12.2",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.2.0",
     "fs-extra": "^11.3.0",
     "nodemon": "^3.1.9",
-    "tailwindcss": "^4.0.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vite": "^6.1.0",
