storage, icons, and off and on

--- a/manifest.json
+++ b/manifest.json
@@ -9,18 +9,26 @@
   },
   "action": {
     "default_popup": "src/pages/popup/index.html",
+    "default_state": "enabled",
     "default_icon": {
-      "32": "icon-32.png"
+      "16": "icon-16.png",
+      "32": "icon-32.png",
+      "48": "icon-48.png",
+      "128": "icon-128.png"
     }
   },
   "chrome_url_overrides": {
     "newtab": "src/pages/newtab/index.html"
   },
   "icons": {
+    "16": "icon-16.png",
+    "32": "icon-32.png",
+    "48": "icon-48.png",
     "128": "icon-128.png"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "content_scripts": [
     {
@@ -41,11 +49,14 @@
   "web_accessible_resources": [
     {
       "resources": [
+        "icon*.png",
         "contentStyle.css",
-        "icon-128.png",
-        "icon-32.png"
+        "public/icon*.png",
+        "public/contentStyle.css",
+        "assets/**/icon*.png",
+        "assets/**/contentStyle.css"
       ],
-      "matches": []
+      "matches": ["<all_urls>"]
     }
   ]
 }
